<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingTop="4dp"
    android:paddingBottom="4dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/reasonWork"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="6dp"
        android:text="@string/reason_work" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/reasonImportant"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="8dp"
        android:text="@string/reason_important" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/reasonChecking"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="8dp"
        android:text="@string/reason_checking" />
</LinearLayout>
